--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "create-hash": "^1.1.0",
     "create-hmac": "^1.1.3",
     "debug": "~3.1.0",
+    "decredjs-lib": "^0.1.1",
     "ecurve": "^1.0.0",
     "merkle-lib": "^2.0.10",
     "pushdata-bitcoin": "^1.0.1",
